methods.slug.SlugHunting.scala.error
Erreur de compilation :
SlugHunting:27: error: not found: value bruhUp
        bruhUp()
        ^