methods.slug.SlugHunting.scala.code
def isFacingTrail():Boolean = {
      
      if (!(isFacingWall())){
        forward()
        if (getGroundColor()==Color.green){
          backward()
          return(true)
        } else{
          backward()
            return(false)
        }
      }
      return(false)
    }

def pas() {
    if (isFacingTrail()){
      brushDown()
      forward()
      brushUp()
    }else {
      right()
      if (isFacingTrail()){
        brushDown()
        forward()
        bruhUp()
      }
      else{
        left()
        left()
        brushDown()
        forward()
        brushUp()
      }
    }
}


def hunt(){
  while(!isOverBaggle()){
    pas()
  }
}